data/src/objects/Audit_History__c.object
<CustomObject>
    <fields>
        <fullName>Change_Date_Time__c</fullName>
        <label>Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Audit Histories</relationshipLabel>
        <relationshipName>Audit_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Audit History</label>
    <nameField>
        <label>Audit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>